--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <title>Calculator</title>
 </head>
 <body>
+    <div id="container">
+        <input type="text" name="display" id="display">
+        <div id="buttons-container">
+            <button style="background-color: rgb(209, 245, 4);">7</button>
+            <button style="background-color: rgb(240, 6, 41);">8</button>
+            <button style="background-color: rgb(54, 4, 235);">9</button>
+            <button style="background-color: deepskyblue;">/</button>
+            <button style="background-color: rgb(11, 218, 190);">4</button>
+            <button style="background-color: rgb(228, 13, 156);">5</button>
+            <button style="background-color: rgb(53, 248, 35);">6</button>
+            <button style="background-color: deepskyblue">*</button>
+            <button style="background-color: rgb(253, 10, 213);">1</button>
+            <button style="background-color: rgb(161, 9, 231);">2</button>
+            <button style="background-color: rgb(236, 17, 90);">3</button>
+            <button style="background-color: deepskyblue;">-</button>
+            <button style="background-color: red; color: white;">C</button>
+            <button style="background-color: rgb(13, 231, 13);">0</button>
+            <button style="background-color: gold;">=</button>
+            <button style="background-color: deepskyblue;">+</button>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
