Add button for decimal point

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div id="container">
         <input type="text" name="display" id="display">
         <div id="buttons-container">
+            <button style="background-color: red; color: white; width: 200px; height: 80px; border-radius: 10px; margin: 10px;">C</button>
+            <button style="background-color: red; color: white; width: 200px; height: 80px; border-radius: 10px; margin: 10px;">X</button>
             <button style="background-color: rgb(209, 245, 4);">7</button>
             <button style="background-color: rgb(240, 6, 41);">8</button>
             <button style="background-color: rgb(54, 4, 235);">9</button>
@@ -23,7 +25,7 @@
             <button style="background-color: rgb(161, 9, 231);">2</button>
             <button style="background-color: rgb(236, 17, 90);">3</button>
             <button style="background-color: deepskyblue;">-</button>
-            <button style="background-color: red; color: white;">C</button>
+            <button id="decimal">.</button>
             <button style="background-color: rgb(13, 231, 13);">0</button>
             <button style="background-color: gold;">=</button>
             <button style="background-color: deepskyblue;">+</button>
