Add Backspace button and Keyboard functionality

--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
     <div id="container">
         <input type="text" name="display" id="display">
         <div id="buttons-container">
-            <button style="background-color: red; color: white; width: 200px; height: 80px; border-radius: 10px; margin: 10px;">C</button>
-            <button style="background-color: red; color: white; width: 200px; height: 80px; border-radius: 10px; margin: 10px;">X</button>
-            <button style="background-color: rgb(209, 245, 4);">7</button>
-            <button style="background-color: rgb(240, 6, 41);">8</button>
-            <button style="background-color: rgb(54, 4, 235);">9</button>
+            <button style="background-color: red; color: white; width: 140px; height: 50px; border-radius: 10px; margin: 10px;">C</button>
+            <button style="background-color: orange; width: 140px; height: 50px; border-radius: 10px; margin: 10px;">X</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
             <button style="background-color: deepskyblue;">/</button>
-            <button style="background-color: rgb(11, 218, 190);">4</button>
-            <button style="background-color: rgb(228, 13, 156);">5</button>
-            <button style="background-color: rgb(53, 248, 35);">6</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
             <button style="background-color: deepskyblue">*</button>
-            <button style="background-color: rgb(253, 10, 213);">1</button>
-            <button style="background-color: rgb(161, 9, 231);">2</button>
-            <button style="background-color: rgb(236, 17, 90);">3</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
             <button style="background-color: deepskyblue;">-</button>
             <button id="decimal">.</button>
-            <button style="background-color: rgb(13, 231, 13);">0</button>
-            <button style="background-color: gold;">=</button>
+            <button>0</button>
+            <button style="background-color: chartreuse;">=</button>
             <button style="background-color: deepskyblue;">+</button>
         </div>
     </div>
