--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
             <button>7</button>
             <button>8</button>
             <button>9</button>
-            <button style="background-color: deepskyblue;">/</button>
+            <button class="operator">/</button>
             <button>4</button>
             <button>5</button>
             <button>6</button>
-            <button style="background-color: deepskyblue">*</button>
+            <button class="operator">*</button>
             <button>1</button>
             <button>2</button>
             <button>3</button>
-            <button style="background-color: deepskyblue;">-</button>
+            <button class="operator">-</button>
             <button id="decimal">.</button>
             <button>0</button>
             <button style="background-color: chartreuse;">=</button>
-            <button style="background-color: deepskyblue;">+</button>
+            <button class="operator">+</button>
         </div>
     </div>
     <script src="script.js"></script>
